# bibliotheca

./: .gitignore  Cargo.toml  README.md
crates/algorithms/dijkstra/: Cargo.toml
crates/algorithms/dijkstra/src/: lib.rs
src/: algorithms.rs  data_structures.rs  heuristics.rs  lib.rs  utils.rs
src/algorithms/: assignment.rs  baby_step_giant_step.rs  cartesian_tree.rs  compress.rs  convex_hull.rs  dijkstra.rs  dinic.rs  discrete_logarithm.rs  dp.rs  fft.rs  fftable.rs  flow.rs  fp.rs  fp_arith.rs  graph.rs  hungarian.cpp  hungarian.rs  kitamasa.rs  lsi.rs  mod.rs  mos_algorithm.rs  poly_arith.rs  polynomial.rs  recurrence.rs  rerooting.rs  rerooting_sansen.rs  rerooting_vain0.rs  rolling_hash.rs  sa_is.rs  scc.rs  slope_trick.rs  sssup.rs  str_algorithms.rs  swag.rs  traversal.rs  zeta_mobius.rs
src/data_structures/: binary_trie.rs  bit_vector.rs  decrimental_predecessor.rs  disjoint_sparse_table.rs  fenwick_tree.rs  graph.rs  heavy_light_decomposition.rs  implicit_treap.rs  interval_heap.rs  lazy_segment_tree.rs  li_chao_tree.rs  monotone_cht.rs  persistent_array.rs  persistent_list.rs  persistent_queue.rs  potentialized_union_find.rs  segment_tree.rs  sparse_table.rs  square_skip_list.rs  union_find.rs  van_emde_boas_tree.rs  wavelet_matrix.rs
src/heuristics/: annealing.rs  genetic.rs  hill_climb.rs  random_search.rs
src/utils/: algebra.rs  algebraic_new.rs  algebraic_old.rs  algebraic_traits.rs  argebraic_traits.rs  bitset.rs  bounds.rs  fp.rs  geometry.rs  graph.rs  math.rs  mod.rs  modint.rs  neboccoio.rs  ntt.rs  polynomial.rs  prime.rs  random.rs  (+2 more)
(+60 files in other folders)
