[package]
name = "bibliotheca"
version = "0.1.0"
authors = ["Whitedwarf137"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
assert-impl = "0.1.3"
num-traits = "0.2.11"
proconio = { version = "0.4.1", features = ["derive"] }
