[package]
name = "dijkstra"
version = "0.1.0"
authors = ["Whitedwarf137 <58183409+Whitedwarf137@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
graph = { path = "../../data_structures/graph" }